Basic DJango app

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,11 @@ isolated_build = True
 
 [testenv]
 deps =
-    pytest
+  -r{toxinidir}/test-requirements.txt
+  -r{toxinidir}/requirements.txt
+
+
 commands =
     pytest
+
+
